name:                hanabi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hanabi#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hanabi
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, directory >= 1.2, ansi-terminal >= 0.6.2.3
